Kubernetes/Networking/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appOne-service
spec:
  type: ClusterIP
  selector:
    app: appOne
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
