Kubernetes/Networking/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appThree-service
spec:
  type: LoadBalancer
  selector:
    app: appThree
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
