Kubernetes/Networking/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appTwo-service
spec:
  type: NodePort
  selector:
    app: appTwo
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
