Kubernetes/Networking/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 80
