Kubernetes/Networking/ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-ssl
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - gerrome.com.ng
    secretName: gerrome.com.ng-tls
  rules:
  - host: gerrome.com.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port: 
              number: 80
